--- a/static/css/dalme_public/dalme_public.css
+++ b/static/css/dalme_public/dalme_public.css
@@ -179,6 +179,7 @@ body {
   flex-direction: column;
   min-height: 100vh;
   width: 100%;
+  overflow: hidden;
 }
 .content {
   padding: 0 1rem 1rem 1rem;
@@ -3244,7 +3245,7 @@ section.transcription {
   color: white;
   font-family: "PT Serif", "Times New Roman", serif;
   font-size: 16px;
-  overflow: scroll;
+  overflow: auto;
   max-height: calc(100vh - 500px);
 }
 .record-info .credits {
